<?php
/**
 * Created by PhpStorm.
 * User: ransomware
 * Date: 04/10/16
 * Time: 11:41
 */

namespace Mapbender\DataSourceBundle\Entity;

class Configuration
{

}