<?php
/**
 * Created by PhpStorm.
 *
 * @author Mohamed Tahrioui
 *         Date: 03/10/16
 *         Time: 20:21
 */

namespace Mapbender\DataSourceBundle\Entity;

class Style extends BaseConfiguration
{

    /* @var int */
    protected $borderSize;

    /* @var string */
    protected $borderColor;

    /* @var int */
    protected $borderAlpha;

    /* @var int */
    protected $backgroundSize;

    /* @var int */
    protected $backgroundAlpha;

    /* @var string */
    protected $backgroundColor;




}