<?php
/**
 * @author Mohamed Tahrioui
 * Date: 03/10/16
 * Time: 20:13
 */

namespace Mapbender\DataSourceBundle\Entity;

class StyleMap extends BaseConfiguration
{
    /* @var int */
    protected $test;

    /* @var Style */
    protected $selectStyle;

    /* @var Style */
    protected $defaultStyle;



}